# PCLBO

./: .gitignore  CMakeLists.txt  README.md
include/heat/: heat.h  heat_diffusion.h  utils.h  voronoi_diagram.h
include/heat/impl/: heat.hpp  heat_diffusion.hpp
include/pclbo/: meshlbo.h  pclbo.h  utils.h  voronoi_diagram.h
include/pclbo/geodesics/: meshgeoheat.h
include/pclbo/impl/: pclbo.hpp
models/: bunny.pcd  bunny.ply
src/: eigenfunctions_demo.cpp  geoheat_demo.cpp  heat_demo.cpp  heat_diffusion.cpp  main.cpp  mesh_geoheat_demo.cpp  meshgeoheat.cpp  meshlbo.cpp  short_rainbow_color_map.h  voronoi_diagram.cpp
